[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/LG_70_shadow.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/game/game_ui/game_over_panel/score_gauge/ScoreGauge.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/game/game_ui/game_over_panel/game_over_panel.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/LG_90_shadow.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/UI/restart.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/home.png" type="Texture" id=8]
[ext_resource path="res://src/ui/ButtonEffect.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "display_game_over"
length = 6.8
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 2, 0.5, 2, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, -100 ), Vector2( 0, 90 ), Vector2( 0, 50 ), Vector2( 0, 90 ), Vector2( 0, 80 ), Vector2( 0, 90 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Control/ScoreGauge")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_score_counting"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.823529 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScoreLabel:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4.5, 4.9 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ScoreLabel:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4.5, 4.9 ),
"transitions": PoolRealArray( 1, 0.25, 1 ),
"update": 0,
"values": [ 100.0, 100.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PointsLabel:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 5, 5.4 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PointsLabel:rect_position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 5, 5.4 ),
"transitions": PoolRealArray( 1, 0.25, 1 ),
"update": 0,
"values": [ 300.0, 300.0, 400.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MessageLabel:rect_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 5.5, 5.7, 5.8, 5.9 ),
"transitions": PoolRealArray( 1, 2, 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("MarginContainer:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 6.4, 6.8 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath(".:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath(".:mouse_filter")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("MarginContainer:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 6.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="GameOverPanel" type="ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_top = -100.0
margin_bottom = -3.05176e-05
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]Game Over[/center]"
meta_underlined = false
text = "Game Over"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ScoreLabel" type="RichTextLabel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 100.0
margin_top = 300.0
margin_right = 460.0
margin_bottom = 380.0
rect_min_size = Vector2( 360, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]15626[/center]"
meta_underlined = false
text = "15626"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PointsLabel" type="RichTextLabel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 300.0
margin_right = 360.0
margin_bottom = 380.0
rect_min_size = Vector2( 360, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]1562[/center]"
meta_underlined = false
text = "1562"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MessageLabel" type="RichTextLabel" parent="."]
margin_top = 600.0
margin_right = 360.0
margin_bottom = 800.0
rect_min_size = Vector2( 360, 0 )
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 180, 100 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]Good
job ![/center]"
meta_underlined = false
text = "Good
job !"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Control" type="Control" parent="."]
margin_left = 288.0
margin_top = 800.0
margin_right = 328.0
margin_bottom = 840.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreGauge" parent="Control" instance=ExtResource( 2 )]
margin_bottom = -6.10352e-05

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.883
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.192
grow_vertical = 0
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 8
custom_constants/margin_bottom = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 576.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2

[node name="HomeButton" parent="MarginContainer/HBoxContainer" instance=ExtResource( 9 )]
margin_right = 286.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
stretch_mode = 5

[node name="RestartButton" parent="MarginContainer/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 290.0
margin_right = 576.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/display_game_over = SubResource( 1 )
[connection signal="pressed" from="MarginContainer/HBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
